# mast-table

./: .bandit.yaml  .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.rst  codecov.yml  conftest.py  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci_workflows.yml  publish.yml
docs/: conf.py  developer_guide.rst  index.rst  installation.rst
mast_table/: __init__.py  datasets.py  filesets.py  mast_table.py  products.py  validate.py
mast_table/tests/: test_mast_table.py
mast_table/tests/data/: mm_jwst_M4.ecsv
notebooks/: mast-table_demo.ipynb
table/: __init__.py  mast_table.py  mast_table.vue  validate.py
table/data/: column_descriptions.json  unique_columns_per_mission.json
tests/: test_mast_table.py
